--- a/eProject/eProject.csproj
+++ b/eProject/eProject.csproj
@@ -122,6 +122,8 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Auth\AuthManager.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\ContactController.cs" />
+    <Compile Include="Controllers\PackageController.cs" />
     <Compile Include="Controllers\SiteController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -132,6 +134,8 @@
     <Content Include="Content\App.css" />
     <Content Include="Content\Css\Account\Login.css" />
     <Content Include="Content\Css\Account\Register.css" />
+    <Content Include="Content\Css\Contact\Index.css" />
+    <Content Include="Content\Css\Package\Detail.css" />
     <Content Include="Content\Css\Site\Index.css" />
     <Content Include="Content\Images\demo.jpg" />
     <Content Include="Content\Images\demo2.png" />
@@ -165,6 +169,8 @@
     <Content Include="Views\Site\Index.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
+    <Content Include="Views\Package\Detail.cshtml" />
+    <Content Include="Views\Contact\Index.cshtml" />
     <None Include="web.Debug.config">
       <DependentUpon>web.config</DependentUpon>
     </None>
