--- a/eProject/eProject.csproj
+++ b/eProject/eProject.csproj
@@ -131,90 +131,89 @@
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
     <Compile Include="Areas\Admin\Controllers\TestController.cs" />
     <Compile Include="Auth\AuthManager.cs" />
-    <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ContactController.cs" />
+    <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\PackageController.cs" />
     <Compile Include="Controllers\SiteController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\Account.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+    <Compile Include="Models\CustomerRegister.cs" />
+    <Compile Include="Models\Bill.cs">
+      <DependentUpon>NexusModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\Billing.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+    <Compile Include="Models\Charge.cs">
+      <DependentUpon>NexusModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\Connect.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+    <Compile Include="Models\Connection.cs">
+      <DependentUpon>NexusModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\ConnectionPaymentPlan.cs">
+      <DependentUpon>NexusModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Contact.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>NexusModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Customer.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\Device.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\DeviceRetailStore.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\DeviceWarehous.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>NexusModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Employee.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>NexusModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\EmployeeRetailStore.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+    <Compile Include="Models\Equipment.cs">
+      <DependentUpon>NexusModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\EmployeeWarehous.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\Model1.Context.cs">
+    <Compile Include="Models\NexusModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Model1.Context.tt</DependentUpon>
+      <DependentUpon>NexusModel.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\Model1.cs">
+    <Compile Include="Models\NexusModel.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>NexusModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\Model1.Designer.cs">
+    <Compile Include="Models\NexusModel.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Model1.edmx</DependentUpon>
+      <DependentUpon>NexusModel.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\Order.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\Package.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\Payment.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>NexusModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Plan.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>NexusModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\RetailStore.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+    <Compile Include="Models\PlanDetail.cs">
+      <DependentUpon>NexusModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\RetailShowRoom.cs">
+      <DependentUpon>NexusModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\RetailShowRoomEmployee.cs">
+      <DependentUpon>NexusModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Service.cs">
+      <DependentUpon>NexusModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\SimpleProxyCustomer.cs" />
     <Compile Include="Models\Supplier.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>NexusModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Warehouse.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>NexusModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\WarehouseEquipment.cs">
+      <DependentUpon>NexusModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\AdminApp.css" />
     <Content Include="Content\App.css" />
+    <Content Include="Content\Css\Customer\Login.css" />
+    <Content Include="Content\Css\Customer\Register.css" />
     <Content Include="Content\Css\Site\Faq.css" />
-    <Content Include="Content\Css\Account\Login.css" />
-    <Content Include="Content\Css\Account\Register.css" />
     <Content Include="Content\Css\Contact\Index.css" />
     <Content Include="Content\Css\Package\Detail.css" />
     <Content Include="Content\Css\Site\HowToOrderService.css" />
@@ -225,19 +224,22 @@
     <Content Include="Content\Images\logo-removebg.png" />
     <Content Include="Content\Images\logo-with-text.png" />
     <Content Include="Content\Images\user-login.png" />
+    <Content Include="Content\Libraries\ToastMessage\ToastMessage.css" />
+    <Content Include="Content\Libraries\ToastMessage\ToastMessage.js" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <Content Include="Models\Model1.Context.tt">
+    <Content Include="Models\NexusModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>Model1.Context.cs</LastGenOutput>
-      <DependentUpon>Model1.edmx</DependentUpon>
+      <DependentUpon>NexusModel.edmx</DependentUpon>
+      <LastGenOutput>NexusModel.Context.cs</LastGenOutput>
     </Content>
-    <Content Include="Models\Model1.tt">
+    <Content Include="Models\NexusModel.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>Model1.edmx</DependentUpon>
-      <LastGenOutput>Model1.cs</LastGenOutput>
+      <DependentUpon>NexusModel.edmx</DependentUpon>
+      <LastGenOutput>NexusModel.cs</LastGenOutput>
     </Content>
+    <Content Include="Uploads\CustomerAvatars\default-user-avatar.png" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
@@ -261,24 +263,24 @@
     <Content Include="Areas\Admin\Views\Test\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Shared\Partials\Header.cshtml" />
     <Content Include="Areas\Admin\Views\Shared\Partials\Sidebar.cshtml" />
-    <EntityDeploy Include="Models\Model1.edmx">
+    <EntityDeploy Include="Models\NexusModel.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>Model1.Designer.cs</LastGenOutput>
+      <LastGenOutput>NexusModel.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <Content Include="Models\Model1.edmx.diagram">
-      <DependentUpon>Model1.edmx</DependentUpon>
+    <Content Include="Models\NexusModel.edmx.diagram">
+      <DependentUpon>NexusModel.edmx</DependentUpon>
     </Content>
     <None Include="packages.config" />
     <Content Include="web.config" />
     <Content Include="Views\Shared\Partials\Header.cshtml" />
     <Content Include="Views\Site\Index.cshtml" />
     <Content Include="Views\Site\Faq.cshtml" />
-    <Content Include="Views\Account\Login.cshtml" />
-    <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Package\Detail.cshtml" />
     <Content Include="Views\Contact\Index.cshtml" />
     <Content Include="Views\Site\HowToOrderAService.cshtml" />
     <Content Include="Views\Shared\Partials\Footer.cshtml" />
+    <Content Include="Views\Customer\Login.cshtml" />
+    <Content Include="Views\Customer\Register.cshtml" />
     <None Include="web.Debug.config">
       <DependentUpon>web.config</DependentUpon>
     </None>
