Done 75% employee management
add, edit, change password, delete, search

--- a/eProject/eProject.csproj
+++ b/eProject/eProject.csproj
@@ -141,6 +141,7 @@
     <Compile Include="Filters\AutoSignIn.cs" />
     <Compile Include="Filters\CustomerAuthorization.cs" />
     <Compile Include="Filters\EmployeeAuthorization.cs" />
+    <Compile Include="Filters\AdministratorAuthorization.cs" />
     <Compile Include="Filters\EmployeeRetailStoreAuthorization.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -167,6 +168,8 @@
     <Compile Include="Models\Employee.cs">
       <DependentUpon>NexusModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\EmployeeInteraction.cs" />
+    <Compile Include="Models\EmployeeViewEditModel.cs" />
     <Compile Include="Models\Equipment.cs">
       <DependentUpon>NexusModel.tt</DependentUpon>
     </Compile>
@@ -188,6 +191,7 @@
     <Compile Include="Models\Order.cs">
       <DependentUpon>NexusModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\PasswordEditViewModel.cs" />
     <Compile Include="Models\PaymentPlan.cs">
       <DependentUpon>NexusModel.tt</DependentUpon>
     </Compile>
@@ -219,6 +223,10 @@
   <ItemGroup>
     <Content Include="Content\AdminApp.css" />
     <Content Include="Content\App.css" />
+    <Content Include="Content\Css\AdminCss\Employee\Add.css" />
+    <Content Include="Content\Css\AdminCss\Employee\ChangePassword.css" />
+    <Content Include="Content\Css\AdminCss\Employee\Edit.css" />
+    <Content Include="Content\Css\AdminCss\Employee\Index.css" />
     <Content Include="Content\Css\AdminCss\Employee\SignIn.css" />
     <Content Include="Content\Css\AdminCss\Service\Add.css" />
     <Content Include="Content\Css\AdminCss\Service\Edit.css" />
@@ -258,6 +266,10 @@
       <LastGenOutput>NexusModel.cs</LastGenOutput>
     </Content>
     <Content Include="Uploads\CustomerAvatars\default-user-avatar.png" />
+    <Content Include="Uploads\EmployeeAvatars\default-employee-avatar.png" />
+    <Content Include="Uploads\ServiceThumbnails\260420231603014365_service-thumbnail102911442.png" />
+    <Content Include="Uploads\ServiceThumbnails\260420231603098623_service-thumbnail1962623907.jpg" />
+    <Content Include="Uploads\ServiceThumbnails\260420231603281519_service-thumbnail796902549.png" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
@@ -267,7 +279,6 @@
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Scripts\" />
-    <Folder Include="Uploads\ServiceThumbnails\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -292,6 +303,10 @@
     <Content Include="Areas\Admin\Views\Service\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\Employee\SignIn.cshtml" />
     <Content Include="Areas\Admin\Views\Shared\_SignInLayout.cshtml" />
+    <Content Include="Areas\Admin\Views\Employee\Add.cshtml" />
+    <Content Include="Areas\Admin\Views\Employee\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Employee\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\Employee\ChangePassword.cshtml" />
     <None Include="packages.config" />
     <Content Include="web.config" />
     <Content Include="Views\Shared\Partials\Header.cshtml" />
