complete admin retail show room

--- a/eProject/Web.config
+++ b/eProject/Web.config
@@ -61,7 +61,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="NexusEntities" connectionString="metadata=res://*/Models.NexusModel.csdl|res://*/Models.NexusModel.ssdl|res://*/Models.NexusModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-NRAGBR2M;initial catalog=Nexus;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="NexusEntities" connectionString="metadata=res://*/Models.NexusModel.csdl|res://*/Models.NexusModel.ssdl|res://*/Models.NexusModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-NRAGBR2M;initial catalog=nexus;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
