--- a/eProject/eProject.csproj
+++ b/eProject/eProject.csproj
@@ -129,8 +129,12 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
+    <Compile Include="Areas\Admin\Controllers\CallChargeController.cs" />
+    <Compile Include="Areas\Admin\Controllers\CallChargeTypeController.cs" />
     <Compile Include="Areas\Admin\Controllers\ContactController.cs" />
     <Compile Include="Areas\Admin\Controllers\EmployeeController.cs" />
+    <Compile Include="Areas\Admin\Controllers\PaymentPlanController.cs" />
+    <Compile Include="Areas\Admin\Controllers\PaymentPlanDetailController.cs" />
     <Compile Include="Areas\Admin\Controllers\RetailShowRoomController.cs" />
     <Compile Include="Areas\Admin\Controllers\ServiceController.cs" />
     <Compile Include="Areas\Admin\Controllers\SiteController.cs" />
@@ -148,6 +152,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\CallChargeHelper.cs" />
     <Compile Include="Models\Account.cs">
       <DependentUpon>NexusModel.tt</DependentUpon>
     </Compile>
@@ -218,6 +223,9 @@
     <Compile Include="Models\sysdiagram.cs">
       <DependentUpon>NexusModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ViewModels\CallCharge\CallChargeViewModel.cs" />
+    <Compile Include="Models\ViewModels\PaymentPlanDetails\PaymentPlanDetailViewModel.cs" />
+    <Compile Include="Models\ViewModels\PaymentPlans\PaymentPlanViewModel.cs" />
     <Compile Include="Models\Warehouse.cs">
       <DependentUpon>NexusModel.tt</DependentUpon>
     </Compile>
@@ -229,6 +237,11 @@
   <ItemGroup>
     <Content Include="Content\AdminApp.css" />
     <Content Include="Content\App.css" />
+    <Content Include="Content\Css\AdminCss\CallChargeType\Index.css" />
+    <Content Include="Content\Css\AdminCss\CallChargeType\Edit.css" />
+    <Content Include="Content\Css\AdminCss\CallCharge\Add.css" />
+    <Content Include="Content\Css\AdminCss\CallCharge\Edit.css" />
+    <Content Include="Content\Css\AdminCss\CallCharge\ListOf.css" />
     <Content Include="Content\Css\AdminCss\Employee\Add.css" />
     <Content Include="Content\Css\AdminCss\Employee\ChangePassword.css" />
     <Content Include="Content\Css\AdminCss\Employee\Edit.css" />
@@ -239,6 +252,12 @@
     <Content Include="Content\Css\AdminCss\Contact\SearchCotact.css" />
     <Content Include="Content\Css\AdminCss\Employee\MyProfile.css" />
     <Content Include="Content\Css\AdminCss\Employee\SignIn.css" />
+    <Content Include="Content\Css\AdminCss\PaymentPlanDetail\Add.css" />
+    <Content Include="Content\Css\AdminCss\PaymentPlanDetail\Edit.css" />
+    <Content Include="Content\Css\AdminCss\PaymentPlan\Add.css" />
+    <Content Include="Content\Css\AdminCss\PaymentPlan\Detail.css" />
+    <Content Include="Content\Css\AdminCss\PaymentPlan\Edit.css" />
+    <Content Include="Content\Css\AdminCss\PaymentPlan\Index.css" />
     <Content Include="Content\Css\AdminCss\RetailShowRoom\EditRetailShowRoom.css" />
     <Content Include="Content\Css\AdminCss\RetailShowRoom\Index.css" />
     <Content Include="Content\Css\AdminCss\Service\Add.css" />
@@ -332,6 +351,17 @@
     <Content Include="Areas\Admin\Views\Employee\ChangePassword.cshtml" />
     <Content Include="Areas\Admin\Views\Employee\MyProfile.cshtml" />
     <Content Include="Areas\Admin\Views\Employee\EditMyPassword.cshtml" />
+    <Content Include="Areas\Admin\Views\PaymentPlan\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\PaymentPlan\Add.cshtml" />
+    <Content Include="Areas\Admin\Views\PaymentPlan\Detail.cshtml" />
+    <Content Include="Areas\Admin\Views\PaymentPlan\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\PaymentPlanDetail\Add.cshtml" />
+    <Content Include="Areas\Admin\Views\PaymentPlanDetail\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\CallChargeType\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\CallChargeType\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\CallCharge\ListOf.cshtml" />
+    <Content Include="Areas\Admin\Views\CallCharge\Add.cshtml" />
+    <Content Include="Areas\Admin\Views\CallCharge\Edit.cshtml" />
     <None Include="packages.config" />
     <Content Include="web.config" />
     <Content Include="Views\Shared\Partials\Header.cshtml" />
