--- a/eProject/eProject.csproj
+++ b/eProject/eProject.csproj
@@ -141,6 +141,7 @@
     <Compile Include="Areas\Admin\Controllers\SiteController.cs" />
     <Compile Include="Areas\Admin\Controllers\SupplierController.cs" />
     <Compile Include="Areas\Admin\Controllers\WarehouseController.cs" />
+    <Compile Include="Areas\Admin\Controllers\WarehouseEquipmentController.cs" />
     <Compile Include="Auth\AuthManager.cs" />
     <Compile Include="Controllers\ContactController.cs" />
     <Compile Include="Controllers\CustomerController.cs" />
@@ -230,6 +231,7 @@
     <Compile Include="Models\ViewModels\Equipment\EquipmentViewModel.cs" />
     <Compile Include="Models\ViewModels\PaymentPlanDetails\PaymentPlanDetailViewModel.cs" />
     <Compile Include="Models\ViewModels\PaymentPlans\PaymentPlanViewModel.cs" />
+    <Compile Include="Models\ViewModels\WarehouseEquipment\WarehouseEquipmentViewModel.cs" />
     <Compile Include="Models\Warehouse.cs">
       <DependentUpon>NexusModel.tt</DependentUpon>
     </Compile>
@@ -273,6 +275,8 @@
     <Content Include="Content\Css\AdminCss\RetailShowRoom\AddRetailStore.css" />
     <Content Include="Content\Css\AdminCss\Supplier\Add.css" />
     <Content Include="Content\Css\AdminCss\Supplier\Index.css" />
+    <Content Include="Content\Css\AdminCss\WarehouseEquipment\Add.css" />
+    <Content Include="Content\Css\AdminCss\WarehouseEquipment\Index.css" />
     <Content Include="Content\Css\AdminCss\Warehouse\AddWarehouse.css" />
     <Content Include="Content\Css\AdminCss\Warehouse\WarehouseList.css" />
     <Content Include="Content\Css\RetailStores\Index.css" />
@@ -378,6 +382,9 @@
     <Content Include="Areas\Admin\Views\CallCharge\ListOf.cshtml" />
     <Content Include="Areas\Admin\Views\CallCharge\Add.cshtml" />
     <Content Include="Areas\Admin\Views\CallCharge\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\WarehouseEquipment\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\WarehouseEquipment\Add.cshtml" />
+    <Content Include="Areas\Admin\Views\WarehouseEquipment\Edit.cshtml" />
     <None Include="packages.config" />
     <Content Include="web.config" />
     <Content Include="Views\Shared\Partials\Header.cshtml" />
